lib/sundials_4.0.2/src/cvode/F90/fcvode.f90


     integer(c_int) function FCVodeSetMaxStepsBetweenJac(cvode_mem, msbj) &
          bind(C,name='CVodeSetMaxStepsBetweenJac')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr),     value :: cvode_mem
       integer(c_long), value :: msbj
     end function FCVodeSetMaxStepsBetweenJac
     
     integer(c_int) function FCVodeSetEpsLin(cvode_mem, eplifac) &
          bind(C,name='CVodeSetEpsLin')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr),    value :: cvode_mem
       real(c_double), value :: eplifac
     end function FCVodeSetEpsLin

     integer(c_int) function FCVodeSetPreconditioner(cvode_mem, pset, psolve) &
          bind(C,name='CVodeSetPreconditioner')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr),    value :: cvode_mem
       type(c_funptr), value :: pset
       type(c_funptr), value :: psolve
     end function FCVodeSetPreconditioner

     integer(c_int) function FCVodeSetJacTimes(cvode_mem, jtsetup, jtimes) &
          bind(C,name='CVodeSetJacTimes')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr),    value :: cvode_mem
       type(c_funptr), value :: jtsetup
       type(c_funptr), value :: jtimes
     end function FCVodeSetJacTimes

     ! -----------------------------------------------------------------
     ! Optional outputs from the CVLS linear solver
     ! -----------------------------------------------------------------

     integer(c_int) function FCVodeGetLinWorkSpace(cvode_mem, lenrwLS, leniwLS) &
          bind(C,name='CVodeGetLinWorkSpace')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr), value :: cvode_mem
       integer(c_long)    :: lenrwLS
       integer(c_long)    :: leniwLS
     end function FCVodeGetLinWorkSpace
     
     integer(c_int) function FCVodeGetNumJacEvals(cvode_mem, njevals) &
          bind(C,name='CVodeGetNumJacEvals')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr), value :: cvode_mem
       integer(c_long)    :: njevals
     end function FCVodeGetNumJacEvals

     integer(c_int) function FCVodeGetNumPrecEvals(cvode_mem, npevals) &
         bind(C,name='CVodeGetNumPrecEvals')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr), value :: cvode_mem
       integer(c_long)    :: npevals
     end function FCVodeGetNumPrecEvals

     integer(c_int) function FCVodeGetNumPrecSolves(cvode_mem, npsolves) &
         bind(C,name='CVodeGetNumPrecSolves')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr), value :: cvode_mem
       integer(c_long)    :: npsolves
     end function FCVodeGetNumPrecSolves

     integer(c_int) function FCVodeGetNumLinIters(cvode_mem, nliters) &
         bind(C,name='CVodeGetNumLinIters')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr), value :: cvode_mem
       integer(c_long)    :: nliters
     end function FCVodeGetNumLinIters

     integer(c_int) function FCVodeGetNumLinConvFails(cvode_mem, nlcfails) &
         bind(C,name='CVodeGetNumLinConvFails')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr), value :: cvode_mem
       integer(c_long)    :: nlcfails
     end function FCVodeGetNumLinConvFails

     integer(c_int) function FCVodeGetNumJTSetupEvals(cvode_mem, njtsetups) &
         bind(C,name='CVodeGetNumJTSetupEvals')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr), value :: cvode_mem
       integer(c_long)    :: njtsetups
     end function FCVodeGetNumJTSetupEvals

     integer(c_int) function FCVodeGetNumJtimesEvals(cvode_mem, njvevals) &
         bind(C,name='CVodeGetNumJtimesEvals')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr), value :: cvode_mem
       integer(c_long)    :: njvevals
     end function FCVodeGetNumJtimesEvals

     integer(c_int) function FCVodeGetNumLinRhsEvals(cvode_mem, nfevalsLS) &
          bind(C,name='CVodeGetNumLinRhsEvals')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr), value :: cvode_mem
       integer(c_long)    :: nfevalsLS
     end function FCVodeGetNumLinRhsEvals

     integer(c_int) function FCVodeGetLastLinFlag(cvode_mem, flag) &
          bind(C,name='CVodeGetLastLinFlag')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr), value :: cvode_mem
       integer(c_long)    :: flag
     end function FCVodeGetLastLinFlag

     ! -----------------------------------------------------------------
     ! NOT INTERFACED: CVodeGetLinReturnFlagName
     ! -----------------------------------------------------------------

     ! =================================================================
     ! Interfaces for cvode_diag.h
     ! =================================================================

     ! -----------------------------------------------------------------
     ! CVDiag
     ! -----------------------------------------------------------------

     integer(c_int) function FCVDiag(cvode_mem) &
          bind(C,name='CVDiag')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr), value :: cvode_mem
     end function FCVDiag

     ! -----------------------------------------------------------------
     ! Optional outputs from the CVDIAG linear solver
     ! -----------------------------------------------------------------

     integer(c_int) function FCVDiagGetWorkSpace(cvode_mem, lenrwLS, leniwLS) &
          bind(C,name='CVDiagGetWorkSpace')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr), value :: cvode_mem
       integer(c_long)    :: lenrwLS
       integer(c_long)    :: leniwLS
     end function FCVDiagGetWorkSpace

     integer(c_int) function FCVDiagGetNumRhsEvals(cvode_mem, nfevalsLS) &
          bind(C,name='CVDiagGetNumRhsEvals')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr), value :: cvode_mem
       integer(c_long)    :: nfevalsLS
     end function FCVDiagGetNumRhsEvals

     integer(c_int) function FCVDiagGetLastFlag(cvode_mem, flag) &
          bind(C,name='CVDiagGetLastFlag')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr), value :: cvode_mem
       integer(c_long)    :: flag
     end function FCVDiagGetLastFlag

     ! -----------------------------------------------------------------
     ! NOT INTERFACED: CVDiagGetReturnFlagName
     ! -----------------------------------------------------------------

     ! =================================================================
     ! Interfaces from cvode_bandpre.h
     ! =================================================================

     ! -----------------------------------------------------------------
     ! CVBandPrecInit
     ! -----------------------------------------------------------------

     integer(c_int) function FCVBandPrecInit(cvode_mem, N, mu, ml) &
          bind(C,name='CVBandPrecInit')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr),     value :: cvode_mem
       integer(c_long), value :: N
       integer(c_long), value :: mu
       integer(c_long), value :: ml
     end function FCVBandPrecInit

     ! -----------------------------------------------------------------
     ! Optional output functions : CVBandPrecGet*
     ! -----------------------------------------------------------------

     integer(c_int) function FCVBandPrecGetWorkSpace(cvode_mem, lenrwLS, leniwLS) &
          bind(C,name='CVBandPrecGetWorkSpace')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr), value :: cvode_mem
       integer(c_long)    :: lenrwLS
       integer(c_long)    :: leniwLS
     end function FCVBandPrecGetWorkSpace

     integer(c_int) function FCVBandPrecGetNumRhsEvals(cvode_mem, nfevalsBP) &
          bind(C,name='CVBandPrecGetNumRhsEvals')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr), value :: cvode_mem
       integer(c_long)    :: nfevalsBP
     end function FCVBandPrecGetNumRhsEvals

     ! =================================================================
     ! Interfaces for cvode_bbdpre.h
     ! =================================================================

     ! -----------------------------------------------------------------
     ! CVBBDPrecInit
     ! -----------------------------------------------------------------

     integer(c_int) function FCVBBDPrecInit(cvode_mem, Nlocal, mudq, mldq, &
          mukeep, mlkeep, dqrely, gloc, cfn) &
          bind(C,name='CVBBDPrecInit')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr),     value :: cvode_mem
       integer(c_long), value :: Nlocal
       integer(c_long), value :: mudq
       integer(c_long), value :: mldq
       integer(c_long), value :: mukeep
       integer(c_long), value :: mlkeep
       real(c_double),  value :: dqrely
       type(c_funptr),  value :: gloc
       type(c_funptr),  value :: cfn
     end function FCVBBDPrecInit

     ! -----------------------------------------------------------------
     ! CVBBDPrecReInit
     ! -----------------------------------------------------------------

     integer(c_int) function FCVBBDPrecReInit(cvode_mem, mudq, mldq, dqrely) &
          bind(C,name='CVBBNPrecReInit')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr),     value :: cvode_mem
       integer(c_long), value :: mudq
       integer(c_long), value :: mldq
       real(c_double),  value :: dqrely
     end function FCVBBDPrecReInit

     ! -----------------------------------------------------------------
     ! BBDPRE optional output extraction routines
     ! -----------------------------------------------------------------

     integer(c_int) function FCVBBDPrecGetWorkSpace(cvode_mem, lenrwLS, leniwLS) &
          bind(C,name='CVBBDPrecGetWorkSpace')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr), value :: cvode_mem
       integer(c_long)    :: lenrwLS
       integer(c_long)    :: leniwLS
     end function FCVBBDPrecGetWorkSpace

     integer(c_int) function FCVBBDPrecGetNumGfnEvals(cvode_mem, ngevalsBBDP) &
          bind(C,name='CVBBDPrecGetNumGfnEvals')
       use, intrinsic :: iso_c_binding
       implicit none
       type(c_ptr), value :: cvode_mem
       integer(c_long)    :: ngevalsBBDP
     end function FCVBBDPrecGetNumGfnEvals

  end interface

end module fcvode_mod
